k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyimg-service
spec:
  selector:
    app: tinyimg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
