k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyimg-via-cf-tunnel
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: api.tinyimg.cc
    http:
      paths:
      - backend:
          service:
            name: tinyimg-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
